Agrega carga dinámica de header, footer y tienda con carrusel en index

--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,13 +1,13 @@
 <nav class="navbar">
-    <div class="container nav-container">
-        <div class="logo">Tienda de Té</div>
-        <ul class="nav-links">
-            <li><a href="tienda.html">Nuestro Té</a></li>
-            <li><a href="tutoriales.html">Tutoriales</a></li>
-            <li><a href="menu-tienda.html">Nuestro Menú</a></li>
-            <li><a href="trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
-            <li><a href="franquicias.html">Franquicias</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </div>
+  <div class="container nav-container">
+    <div class="logo">Tienda de Té</div>
+    <ul class="nav-links">
+      <li><a href="assets/pages/tienda.html">Nuestro Té</a></li>
+      <li><a href="assets/pages/tutoriales.html">Tutoriales</a></li>
+      <li><a href="assets/pages/menu-tienda.html">Nuestro Menú</a></li>
+      <li><a href="assets/pages/trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
+      <li><a href="assets/pages/franquicias.html">Franquicias</a></li>
+      <li><a href="assets/pages/contacto.html">Contacto</a></li>
+    </ul>
+  </div>
 </nav>
