se soluciono la falla del carrusel y se empezo a modificar contacto

--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -2,12 +2,12 @@
   <div class="container nav-container">
     <div class="logo">Tienda de Té</div>
     <ul class="nav-links">
-      <li><a href="assets/pages/tienda.html">Nuestro Té</a></li>
+      <li><a href="assets/pages/index.html">Nuestro Té</a></li>
       <li><a href="assets/pages/tutoriales.html">Tutoriales</a></li>
       <li><a href="assets/pages/menu-tienda.html">Nuestro Menú</a></li>
       <li><a href="assets/pages/trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
       <li><a href="assets/pages/franquicias.html">Franquicias</a></li>
-      <li><a href="assets/pages/contacto.html">Contacto</a></li>
+      <li><a href="pages/contacto.html">Contacto</a></li>
     </ul>
   </div>
 </nav>
