Agregada página Trabajá con nosotros

--- a/Desktop/front final/Tienda-de-Te-main/assets/templates/header.html
+++ b/Desktop/front final/Tienda-de-Te-main/assets/templates/header.html
@@ -7,7 +7,7 @@
             <li><a href="assets/pages/index.html">Nuestro Té</a></li>
             <li><a href="assets/pages/tutoriales.html">Tutoriales</a></li>
             <li><a href="assets/pages/menu-tienda.html">Nuestro Menú</a></li>
-            <li><a href="assets/pages/trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
+            <li><a href="pages/trabaja.html">Trabajá con nosotros</a></li>
             <li><a href="assets/pages/franquicias.html">Franquicias</a></li>
             <li><a href="pages/contacto.html">Contacto</a></li>
             
