--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -1,5 +1,52 @@
-<footer class="footer">
-    <div class="container">
-        <p>&copy; 2025 Tienda de Té. Todos los derechos reservados.</p>
+<footer class="main-footer">
+    <div class="footer-container">
+        <div class="footer-column brand-info">
+            <h2>TIENDA DE TÉ</h2>
+        </div>
+
+        <div class="footer-column">
+            <h3>CONTENIDOS</h3>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="assets/pages/nuestro-cafe.html">Nuestro Té</a></li>
+                <li><a href="assets/pages/menu-tienda.html">Nuestro menú</a></li>
+            </ul>
+        </div>
+        <!-- ver el nombre que quedó a trabaja con nosotros si es o no trabaja-en-tdc.html -->
+        <div class="footer-column">
+            <h3>¿NECESITAS AYUDA?</h3>
+            <ul>
+                <li><a href="assets/pages/tutoriales.html">Tutoriales</a></li>
+                <li><a href="assets/pages/trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
+                <li><a href="assets/pages/franquicias.html">Franquicias</a></li>
+                <li><a href="assets/pages/contacto.html">Contacto</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-column subscribe-form">
+            <h3>¡SUSCRÍBETE PARA RECIBIR DESCUENTOS Y NOVEDADES EXCLUSIVAS!</h3>
+            <form>
+                <div class="form-group">
+                    <input type="text" id="subscribe-name" name="name" placeholder="Tu nombre" required>
+                </div>
+                <div class="form-group">
+                    <input type="email" id="subscribe-email" name="email" placeholder="Tu email" required>
+                </div>
+                <button type="submit" class="btn-subscribe">SUSCRIBIRME</button>
+            </form>
+            <div class="social-icons">
+                <h4>CONÉCTATE CON NOSOTROS</h4>
+                <!-- FALTAN IMGS DE ICONOS -->
+                <!-- <a href="#" class="social-icon"><img src="assets/images/facebook-icon.png" alt="Facebook"></a>
+                <a href="#" class="social-icon"><img src="assets/images/instagram-icon.png" alt="Instagram"></a> -->
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
+        <p>&copy; Copyright 2025 Tienda de Té. Todos los derechos reservados.</p>
+        <p>Todos los logos, productos, marcas y nombres aquí utilizados son propiedad registrada.</p>
     </div>
 </footer>
+
+
