--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -4,12 +4,12 @@
             <a href="../index.html" style="color: inherit; text-decoration: none;">Tienda de Té</a>
         </div>
         <ul class="nav-links">
-            <li><a href="assets/pages/index.html">Nuestro Té</a></li>
-            <li><a href="assets/pages/tutoriales.html">Tutoriales</a></li>
-            <li><a href="assets/pages/menu-tienda.html">Nuestro Menú</a></li>
-            <li><a href="assets/pages/trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
-            <li><a href="assets/pages/franquicias.html">Franquicias</a></li>
-            <li><a href="pages/contacto.html">Contacto</a></li>
+            <li><a href="../pages/index.html">Nuestro Té</a></li>
+            <li><a href="../pages/tutoriales.html">Tutoriales</a></li>
+            <li><a href="../pages/menu-tienda.html">Nuestro Menú</a></li>
+            <li><a href="../pages/trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
+            <li><a href="../pages/franquicias.html">Franquicias</a></li>
+            <li><a href="../pages/contacto.html">Contacto</a></li>
         </ul>
     </div>
 </nav>
