se corrigen rutas y templates

--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -7,19 +7,19 @@
         <div class="footer-column">
             <h3>CONTENIDOS</h3>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="assets/pages/nuestro-cafe.html">Nuestro Té</a></li>
-                <li><a href="assets/pages/menu-tienda.html">Nuestro menú</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../pages/tienda.html">Nuestro Té</a></li>
+                <li><a href="../pages/menu-tienda.html">Nuestro menú</a></li>
             </ul>
         </div>
         <!-- ver el nombre que quedó a trabaja con nosotros si es o no trabaja-en-tdc.html -->
         <div class="footer-column">
             <h3>¿NECESITAS AYUDA?</h3>
             <ul>
-                <li><a href="assets/pages/tutoriales.html">Tutoriales</a></li>
-                <li><a href="assets/pages/trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
-                <li><a href="assets/pages/franquicias.html">Franquicias</a></li>
-                <li><a href="assets/pages/contacto.html">Contacto</a></li>
+                <li><a href="../pages/tutoriales.html">Tutoriales</a></li>
+                <li><a href="../pages/trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
+                <li><a href="../pages/franquicias.html">Franquicias</a></li>
+                <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
 
