--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -4,7 +4,7 @@
             <a href="../index.html" style="color: inherit; text-decoration: none;">Tienda de Té</a>
         </div>
         <ul class="nav-links">
-            <li><a href="../pages/index.html">Nuestro Té</a></li>
+            <li><a href="../pages/tienda.html">Nuestro Té</a></li>
             <li><a href="../pages/tutoriales.html">Tutoriales</a></li>
             <li><a href="../pages/menu-tienda.html">Nuestro Menú</a></li>
             <li><a href="../pages/trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
