--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -36,9 +36,8 @@
             </form>
             <div class="social-icons">
                 <h4>CONÉCTATE CON NOSOTROS</h4>
-                <!-- FALTAN IMGS DE ICONOS -->
-                <!-- <a href="#" class="social-icon"><img src="assets/images/facebook-icon.png" alt="Facebook"></a>
-                <a href="#" class="social-icon"><img src="assets/images/instagram-icon.png" alt="Instagram"></a> -->
+                <a href="https://github.com/FabioNatanaelMora/Tienda-de-Te.git" class="social-icon"><img src="../images/logo/github.png" alt="github"></a>
+                
             </div>
         </div>
     </div>
