--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,15 +1,16 @@
 <nav class="navbar">
     <div class="container nav-container">
         <div class="logo">
-            <a href="../index.html" style="color: inherit; text-decoration: none;">Tienda de Té</a>
+            <a href="/assets/index.html" style="color: inherit; text-decoration: none;">Tienda de Té</a>
         </div>
         <ul class="nav-links">
-            <li><a href="../pages/tienda.html">Nuestro Té</a></li>
-            <li><a href="../pages/tutoriales.html">Tutoriales</a></li>
-            <li><a href="../pages/menu-tienda.html">Nuestro Menú</a></li>
-            <li><a href="../pages/trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
-            <li><a href="../pages/franquicias.html">Franquicias</a></li>
-            <li><a href="../pages/contacto.html">Contacto</a></li>
+            <base href="/assets/pages/">
+            <li><a href="tienda.html">Nuestro Té</a></li>
+            <li><a href="tutoriales.html">Tutoriales</a></li>
+            <li><a href="menu-tienda.html">Nuestro Menú</a></li>
+            <li><a href="trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
+            <li><a href="franquicias.html">Franquicias</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </div>
 </nav>
